package message;



message MsgIntPair
{
	required int32 number_1 = 1;
	required int32 number_2 = 2;
}

message MsgHeroData
{	
	required string name = 1;		
	required int32 gold = 2;
	repeated MsgIntPair records = 3;
	repeated bool heroes = 4;
	repeated MsgTaskInfo tasks = 5;
	required int32 current_hero = 6;
	required int32 complete_task_count = 7;
	
}


enum TaskType
{
	TaskType_NULL = 0;
	TaskType_KillMonster = 1;
	TaskType_PassGame = 2;
	TaskType_LimitTime = 3;
	TaskType_LimitLevel = 4;
	TaskType_LimitRevive = 5;
	TaskType_LimitTime_KillMonster = 6;
	TaskType_Accumulate_KillMonster = 7;
}

message MsgTaskConditionInfo
{
	required TaskType taskType = 1[default=TaskType_NULL];
	required int32 argument_1 = 2;
	required int32 argument_2 = 3;
}
message MsgTaskConfigInfo
{
	required int32 taskID = 1;
	repeated MsgTaskConditionInfo task_condition = 2;
	required int32 require_time = 3;
	required int32 require_unlock_chapter = 4;
	required int32 require_unlock_section = 5;
	required int32 require_unlock_complete_task_count = 6;
	required int32 gift_gold = 7;
	required int32 describe = 8;
}


message MsgShopConfigInfo
{
	required int32 grid_id = 1;
	required int32 hero_id = 2;
	required int32 require_gold = 3;
	required int32 cheape_gold = 4;
}

message MsgTaskInfo
{
	required int32 TaskID = 1;
	required int32 argument_1 = 2;
	required int32 useTime = 3;
}

message MsgChapterConfigInfo
{
	required int32 chapter_id = 1;
	required int32 required_chapter_id = 2;
	required int32 required_section_id = 3;
	required int32 required_task_complete_count = 4;
	required int32 require_gold = 5;
	required int32 max_section_count = 6;
}

